@@ -71,6 +71,9 @@ Avro 1.4.0 (unreleased)
     AVRO-548. Python client should handle CLIENT handshake match status
     correctly. (hammer)
 
+    AVR0-555 Missing license headers in some ruby source
+    files. (jmhodges)
+ 
 Avro 1.3.3 (Unreleased)
 
 Avro 1.3.2 (31 March 2010)
